--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule = "ignyt beer longue/ignyt"]
+[submodule = "ignyt"]
     path =  ignyt beer longue/ignyt
     url = https://github.com/srustiiii/Arsrudi-.git
